Updated swagger doc and managed package.json
